--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 <body>
     <main>
         <section id="container">
-           <!-- <article class="cartao">
+            <!-- Exemplo de cartão ativo -->
+            <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Português</h3>
                     <div class="cartao__conteudo__pergunta">
-                       <p>Qual é a diferença "por que", "por quê"?</p> 
+                        <p>Qual é a diferença entre "por que" e "por quê"?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                       <p> Resposta: 1 - Por que: Usado em perguntas diretas ou indiretas e significa "por qual razão" "ou por qual motivo".<br> 
-                        2 - Por quê: Usado no final de frases onterrogativas e também  significa "por qual razão". Sempre vem acompanhado da pontuação (como interrogação).</p>  
+                        <p>
+                            Resposta:
+                            <br>1 - **Por que**: Usado em perguntas diretas ou indiretas e significa "por qual razão" ou "por qual motivo".
+                            <br>2 - **Por quê**: Usado no final de frases interrogativas e também significa "por qual razão". Sempre vem acompanhado de pontuação (como interrogação).
+                        </p>
                     </div>
                 </div>
-            </article>-->
-          
+            </article>
         </section>
     </main>
     <footer>
